examples/test/testpolicy16661.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16661
  namespace: namespace57
spec:
  podSelector:
    matchLabels:
      key7: value29
      key11: value22
      key45: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value30
          key7: value17
          key29: value26
      podSelector:
        matchLabels:
          key6: value26
